--- a/README
+++ b/README
@@ -1,3 +1,12 @@
-HELLO?
-
-FJFJFJFJFJJF
+<html>
+  <header>
+    <nav>
+    </nav>
+  </header>
+  <body>
+    <div id="wrapper">
+      <div id="content">
+      </div>
+    </div>
+  </body>
+</html>
