--- a/README
+++ b/README
@@ -1,12 +1,1 @@
-<html>
-  <header>
-    <nav>
-    </nav>
-  </header>
-  <body>
-    <div id="wrapper">
-      <div id="content">
-      </div>
-    </div>
-  </body>
-</html>
+WÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆÆ
